welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:2: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  if(12<a && a<20 && !(12<b && b<20 &&) || 12<b && b<20 && !(12<a && a<20 &&)){return true}
                                    ^loneTeen:2: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  if(12<a && a<20 && !(12<b && b<20 &&) || 12<b && b<20 && !(12<a && a<20 &&)){return true}
                                                                          ^